--- a/styles.css
+++ b/styles.css
@@ -185,6 +185,11 @@ button {
   p {
     text-align: left;
   }
+  
+    h1 {
+    margin-left: 30px;
+    margin-right: 30px;
+  }
 
   h2 {
     text-align: center;
@@ -193,10 +198,6 @@ button {
   h3 {
     margin-bottom: 1.5rem;
     text-align: center;
-  }
-  
-    .heading {
-    width: 50%;
   }
 
   .mountain-img {
